--- a/viewer.html
+++ b/viewer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spielplan v1.2</title>
+    <title>Spielplan v1.1</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -127,7 +127,7 @@
         let pointsTeam1 = 0;
         let pointsTeam2 = 0;
 
-        // Falls 'results' vorhanden und nicht leer, berechne die Punkte
+        // Überprüfen, ob Ergebnisse vorhanden sind und berechne Punkte nur für vollständige Ergebnisse
         if (game.results && game.results.length > 0) {
             game.results.forEach(set => {
                 // Ignoriere leere oder ungültige Satz-Ergebnisse
@@ -144,9 +144,9 @@
             });
         }
 
-        // Berechne finalResult, wenn es nicht vorhanden ist
+        // Berechne finalResult nur, wenn es ein vollständiges Ergebnis gibt
         let finalResult = game.finalResult;
-        if (!finalResult) {
+        if (!finalResult && game.results && game.results.length === 3) {
             finalResult = pointsTeam1 > pointsTeam2 ? `${game.team1} gewinnt` : `${game.team2} gewinnt`;
         }
 
@@ -155,7 +155,7 @@
             <td>Spiel ${game.match}</td>
             <td>${game.team1}</td>
             <td>${game.team2}</td>
-            <td>${finalResult} (${game.results ? game.results.join(', ') : 'kein Ergebnis'})</td>
+            <td>${finalResult || 'Noch kein Ergebnis'}</td>
         </tr>`;
         scheduleTable.innerHTML += row;
 
@@ -163,21 +163,23 @@
         if (!standings[game.team1]) standings[game.team1] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
         if (!standings[game.team2]) standings[game.team2] = { wins: 0, losses: 0, scored: 0, conceded: 0, goalDiff: 0 };
 
-        // Punktestand und Spielausgang aktualisieren
-        standings[game.team1].scored += pointsTeam1;
-        standings[game.team1].conceded += pointsTeam2;
-        standings[game.team2].scored += pointsTeam2;
-        standings[game.team2].conceded += pointsTeam1;
+        // Punktestand und Spielausgang aktualisieren nur, wenn das Spiel abgeschlossen ist
+        if (finalResult) {
+            standings[game.team1].scored += pointsTeam1;
+            standings[game.team1].conceded += pointsTeam2;
+            standings[game.team2].scored += pointsTeam2;
+            standings[game.team2].conceded += pointsTeam1;
 
-        standings[game.team1].goalDiff += pointsTeam1 - pointsTeam2;
-        standings[game.team2].goalDiff += pointsTeam2 - pointsTeam1;
+            standings[game.team1].goalDiff += pointsTeam1 - pointsTeam2;
+            standings[game.team2].goalDiff += pointsTeam2 - pointsTeam1;
 
-        if (finalResult.includes(game.team1)) {
-            standings[game.team1].wins += 2;
-            standings[game.team2].losses += 2;
-        } else if (finalResult.includes(game.team2)) {
-            standings[game.team1].losses += 2;
-            standings[game.team2].wins += 2;
+            if (finalResult.includes(game.team1)) {
+                standings[game.team1].wins += 2;
+                standings[game.team2].losses += 2;
+            } else if (finalResult.includes(game.team2)) {
+                standings[game.team1].losses += 2;
+                standings[game.team2].wins += 2;
+            }
         }
     });
 
@@ -198,6 +200,21 @@
         standingsTable.innerHTML += row;
     });
 }
+
+// Funktion zum Abrufen von Daten aus Firebase und Aktualisieren der Anzeige
+function fetchSchedule() {
+    const databaseRef = firebase.database().ref('spielplan'); // Firebase Referenz
+
+    // Daten abrufen und rendern
+    databaseRef.once('value', snapshot => {
+        const schedule = snapshot.val() || [];
+        renderSchedule(schedule);
+    });
+}
+
+// Automatische regelmäßige Aktualisierung alle 10 Sekunden
+setInterval(fetchSchedule, 10000); // Alle 10 Sekunden die Daten abrufen
+
 
 // Funktion zum Abrufen von Daten aus Firebase und Aktualisieren der Anzeige
 function fetchSchedule() {
